# qqbot.rs

./: .clog.toml  .gitignore  Cargo.toml  README.md  default.account.json  default.config.toml
crates/ntrim/: Cargo.toml
crates/ntrim-core/: Cargo.toml  build.rs
crates/ntrim-core/protos/: d50.proto  qqsecurity.proto
crates/ntrim-core/protos/bdh/: highway.proto  rich_media_ext.proto
crates/ntrim-core/protos/group_member_card/: get_group_member_card_info.proto
crates/ntrim-core/protos/im/: honor.proto
crates/ntrim-core/protos/msg/: comm_elem.proto  comm_msg.proto  ntv2_rich_media.proto  send_msg.proto
crates/ntrim-core/protos/oidb/: cmd_0x88d.proto  trpc_oidb.proto
crates/ntrim-core/protos/summary_card/: busi.proto  gate.proto
crates/ntrim-core/protos/trpc/olpush/: msg_push.proto
crates/ntrim-core/protos/trpc/register/: push_params.proto  ssoinfo_sync.proto  sync_info_push.proto
crates/ntrim-core/protos/trpc/richmedia/: http_conn_0x6ff.proto  rich_media_ntv2.proto  rich_media_ntv2_url_fetch.proto
crates/ntrim-core/protos/trpc/status/: sso_heartbeat.proto
crates/ntrim-core/protos/wtlogin/: device_report.proto
crates/ntrim-core/src/: bot.rs  lib.rs  reconnect.rs  refresh_session.rs
crates/ntrim-core/src/client/: mod.rs  tcp.rs  trpc.rs  unipacket.rs
crates/ntrim-core/src/client/codec/: decoder.rs  encoder.rs  mod.rs
crates/ntrim-core/src/client/dispatcher/: mod.rs
crates/ntrim-core/src/client/packet/: from_service_msg.rs  mod.rs  packet.rs  to_service_msg.rs
crates/ntrim-core/src/client/qsecurity/: mod.rs
crates/ntrim-core/src/commands/: mod.rs
crates/ntrim-core/src/commands/contact/: get_profile_detail.rs  get_summary_card.rs  mod.rs  set_profile_detail.rs  vote_user.rs
crates/ntrim-core/src/commands/friend/: get_friend_group_list.rs  mod.rs
crates/ntrim-core/src/commands/msg_svc/: mod.rs  send_msg.rs  send_raw_msg.rs
crates/ntrim-core/src/commands/register/: heartbeat.rs  mod.rs
crates/ntrim-core/src/commands/register_old/: mod.rs
crates/ntrim-core/src/commands/richmedia/: mod.rs  request_download_rkey.rs  request_upload_resource.rs  request_upload_ukey.rs
crates/ntrim-core/src/commands/status/: heartbeat.rs  mod.rs  nt_heartbeat.rs
crates/ntrim-core/src/commands/troop/: get_troop_info.rs  get_troop_list.rs  get_troop_member_card_info.rs  get_troop_member_list.rs  get_troop_simple_info.rs  mod.rs
crates/ntrim-core/src/commands/wtlogin/: mod.rs  refresh_sig.rs  tlv.rs
crates/ntrim-core/src/db/: friend_list.rs  group_list.rs  group_member_list.rs  message_record.rs  mod.rs  simple_record.rs
crates/ntrim-core/src/events/: mod.rs  wtlogin_event.rs
crates/ntrim-core/src/jce/: friendlist.get_friend_group_list.rs  friendlist.get_multi_group_info.rs  friendlist.get_troop_list.rs  friendlist.get_troop_member_list.rs  mod.rs  onlinepush.reqpushmsg.rs  summary.rs  visitor_svc.req_favourite.rs
crates/ntrim-core/src/service/: heartbeat.rs  mod.rs
crates/ntrim-core/src/service/bdh/: echo.rs  mod.rs  upload_block_no_resp.rs
crates/ntrim-core/src/service/friend/: get_friend_list.rs  mod.rs
crates/ntrim-core/src/service/msg/: message_factory.rs  mod.rs  send_msg.rs
crates/ntrim-core/src/service/rich_media/: get_upload_ukey.rs  mod.rs  request_upload_group_res.rs
crates/ntrim-core/src/service/troop/: get_troop_info.rs  get_troop_list.rs  get_troop_member_card_info.rs  get_troop_member_list.rs  mod.rs
crates/ntrim-core/src/servlet/: mod.rs
crates/ntrim-core/src/servlet/olpush/: mod.rs
crates/ntrim-core/src/servlet/olpush/msg/: decoder.rs  mod.rs  record.rs
crates/ntrim-core/src/servlet/register/: mod.rs
crates/ntrim-core/src/session/: device.rs  mod.rs  protocol.rs  ticket.rs
crates/ntrim-macros/: Cargo.toml
crates/ntrim-macros/src/: command.rs  lib.rs  servlet.rs
crates/ntrim-tools/: Cargo.toml
crates/ntrim-tools/src/: lib.rs  oicq.rs
crates/ntrim-tools/src/bytes/: builder.rs  mod.rs  reader.rs
crates/ntrim-tools/src/cqp/: at.rs  basketball.rs  bubble_face.rs  cq_parser.rs  custom_music.rs  face.rs  gift.rs  image.rs  location.rs  mod.rs  music.rs  new_dice.rs  new_rps.rs  parser.rs  poke.rs  record.rs  reply.rs  segment_parser.rs  share.rs  touch.rs  video.rs  weather.rs
crates/ntrim-tools/src/crypto/: ecdh.rs  mod.rs  qqtea.rs
crates/ntrim-tools/src/flate2/: mod.rs
crates/ntrim-tools/src/sigint/: mod.rs
crates/ntrim-tools/src/simple_prost/: mod.rs
crates/ntrim-tools/src/tokiort/: mod.rs
crates/ntrim/src/: args.rs  config.rs  main.rs
crates/ntrim/src/backend/: mod.rs
crates/ntrim/src/backend/onebot/: http.rs  mod.rs
crates/ntrim/src/backend/onebot/api/: account.rs  mod.rs
crates/ntrim/src/backend/onebot/api/account/: get_account_info.rs  get_friend_list.rs  get_group_info.rs  get_group_list.rs  get_group_member_info.rs  get_group_member_list.rs  get_qq_profile.rs  get_stranger_info.rs  mod.rs  send_like.rs  set_qq_profile.rs
crates/ntrim/src/backend/onebot/api/message/: mod.rs  send_group_msg.rs  send_private_msg.rs
crates/ntrim/src/login/: mod.rs
crates/ntrim/src/login/session/: mod.rs  register.rs
crates/ntrim/src/qqsecurity/: mod.rs
standard/: Args.md  CompileEnv.md  Enviroment.md  Flags.md  Names.md  Readme.md
