[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.package]
rust-version = "1.79"
edition = "2021"

license = "GPL-3"
homepage = "https://github.com/inmes-dev/ntrnm"
repository = "https://github.com/inmes-dev/ntrnm"

[workspace.metadata.release]
tag-message = "Release {{crate_name}} version {{version}}"
tag-name = "{{prefix}}v{{version}}"