[package]
name = "ntrim-core"
version = "0.0.1"
description = "Core part of the `ntrim`"

rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

documentation = "https://github.com/inmes-dev/ntrnm"
readme = "../../README.md"

keywords = ["ntrim", "oicq", "qqbot", "icqq", "bot"]
categories = ["api-bindings", "asynchronous"]

[features]
# NB: When adding features here, don't forget to update ntrim's Cargo.toml
default = ["sql"]
sql = ["sqlx"]
extend_cqcode = ["ntrim-tools/extend_cqcode"]
full = ["sql", "extend_cqcode"]


[dependencies]
ntrim-tools = { version = "0.0.1", path = "../ntrim-tools", default-features = false }
ntrim-macros = { version = "0.0.1", path = "../ntrim-macros", default-features = false }

tokio = { version = "1.37.0", features = ["full"] }
bytes = "1.6.0"
reqwest = { version = "0.12.2", features = [
    "json",
    "stream",
    "multipart",
    "gzip",
    "deflate",
    "http2",
    "rustls-tls"
], default-features = false }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "chrono"], optional = true  }
prost = "0.12.6"
jcers = { version = "0.1.2", features = ["derive"] }
log = "0.4.21"
url = { version = "2.5.0", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_with_macros = "3.7.0"
uuid = { version = "1.8.0", features = ["v4"] }        # for attaching input files
derive_more = "0.99.17"
mime = "0.3.17"
thiserror = "1.0.58"
chrono = { version = "0.4.37", features = ["now"] }
bitflags = { version = "2.5.0" }
hex = "0.4.3"
rand = "0.9.0-alpha.1"
byteorder = "1.5.0"
prost-build = "0.12.3"
env_logger = "0.11.3"
anyhow = "1.0.81"
md5 = "0.7.0"
time = "0.3.36"
once_cell = "1.19.0"
derivative = "2.2.0"

[build-dependencies]
prost-build = "0.12.3"
reqwest = { version = "0.12.2", features = [
    "stream",
    "multipart",
    "gzip",
    "deflate",
    "blocking",
], default-features = false }
zip = "2.1.1"
walkdir = "2.5.0"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
cool_asserts = "2.0.3"

[package.metadata.docs.rs]
features = ["full", "nightly", "tokio/rt-multi-thread"]
rustdoc-args = ["--cfg", "docsrs", "-Znormalize-docs"]

# https://github.com/rust-lang/rust/issues/88791
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[package.metadata.release]
tag-prefix = "core-"
enable-features = ["full"]
pre-release-replacements = [
    { file = "README.md", search = "ntrim-core = \"[^\"]+\"", replace = "ntrim-core = \"{{version}}\"" },
    { file = "src/lib.rs", search = "ntrim-core = \"[^\"]+\"", replace = "ntrim-core = \"{{version}}\"" },
    { file = "CHANGELOG.md", search = "## unreleased", replace = "## unreleased\n\n## {{version}} - {{date}}", exactly = 1 },
]
